# libdazzle

./: meson.build
src/: meson.build
src/actions/: meson.build
src/app/: meson.build
src/fuzzy/: meson.build
src/menus/: meson.build
src/util/: meson.build
src/widgets/: meson.build
